# vibroacoustic-snn-research

./: .gitignore  README.md  pyproject.toml
configs/: adaptive_wavelet_ann.yaml  adaptive_wavelet_rate_snn.yaml  adaptive_wavelet_snn.yaml  fft_mlp.yaml  fft_xgboost.yaml  filterbank_ann.yaml  filterbank_snn.yaml  filterbank_snn_smoke.yaml  mel_cnn.yaml  mel_cnn_smoke.yaml  raw_cnn.yaml  vp_ann.yaml  vp_snn.yaml  wavelet_cnn.yaml
outputs/analysis/: dataset_card.md
outputs/manifests/: ottawa_manifest.csv
outputs/reports/: experiment_summary_table.csv  final_study_summary.md  performance_efficiency_table.csv
scripts/: aggregate_results.py  build_manifest.py  run_analysis.py  run_experiment.py
src/vibro_snn_research/: __init__.py  analysis.py  config.py  dataset.py  efficiency.py  experiments.py  features.py  manifest.py  metrics.py  plotting.py  reporting.py  training.py
src/vibro_snn_research/models/: __init__.py  cnn.py  frontends.py
tests/: test_config.py  test_dataset.py  test_features.py  test_manifest.py  test_metrics.py  test_models.py  test_vp_experiments.py
